single-ec2-instance/sg.tf
resource "aws_security_group" "default" {
  name = "${var.sg_name}"
  tags = {
        Name = "${var.sg_name}"
  }
  description = "ONLY HTTP CONNECTION INBOUD"

  ingress {
        from_port = 80
        to_port = 80
        protocol = "TCP"
        cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = "22"
    to_port     = "22"
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
